--- a/po/es/servers.po
+++ b/po/es/servers.po
@@ -1,23 +1,23 @@
-# Spanish translations for SHR Tools package.
-# Copyright (C) 2020 THE SHR Tools'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the SHR Tools package.
-#  <sergio.hdzreyes@gmail.com>, 2020.
+# Spanish translations for PACKAGE package.
+# Copyright (C) 2020 THE PACKAGE'S COPYRIGHT HOLDER
+# This file is distributed under the same license as the PACKAGE package.
+# Sergio Hernández Reyes <sergio.hdzreyes@gmail.com>, 2020.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: SHR Tools 0.1\n"
-"Report-Msgid-Bugs-To: sergio.hdzreyes@gmail.com\n"
-"POT-Creation-Date: 2020-04-20 23:02-0500\n"
-"PO-Revision-Date: 2020-04-20 23:08-0500\n"
-"Last-Translator:  <sergio.hdzreyes@gmail.com>\n"
+"Project-Id-Version: PACKAGE VERSION\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2020-04-22 00:27-0500\n"
+"PO-Revision-Date: 2020-04-22 00:27-0500\n"
+"Last-Translator: Sergio Hernndez Reyes <sergio.hdzreyes@gmail.com>\n"
 "Language-Team: Spanish <es@tp.org.es>\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=ASCII\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
-#: src/servers.c:13
+#: src/servers.c:18
 #, c-format
-msgid "Hello!"
-msgstr "Hola!"
+msgid "servers"
+msgstr "servidores"
