--- a/po/servers.pot
+++ b/po/servers.pot
@@ -6,18 +6,18 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: SHR Tools 0.1\n"
-"Report-Msgid-Bugs-To: sergio.hdzreyes@gmail.com\n"
-"POT-Creation-Date: 2020-04-20 23:02-0500\n"
+"Project-Id-Version: PACKAGE VERSION\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2020-04-22 00:27-0500\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=CHARSET\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: src/servers.c:13
+#: src/servers.c:18
 #, c-format
-msgid "Hello!"
+msgid "servers"
 msgstr ""
